--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,38 +1,12 @@
 {
   "compilerOptions": {
-      "target": "es6",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "sourceMap": true,
-      "noEmitHelpers": true,
-      "lib": ["es6", "dom"],
-      "strictNullChecks": false,
-      "baseUrl": "./src",
-      "paths": [
-      ],
-      "types": [
-        "jasmine",
-        "jquery",
-        "lodash",
-        "node",
-        "source-map",
-        "webpack"
-      ]
-  },
-
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
-
-  "awesomeTypescriptLoaderOptions": {
-    "forkChecker": true,
-    "useWebpackText": true
-  },
-
-  "compileOnSave": false,
-  "buildOnSave": false,
-  "atom": { "rewriteTsconfig": false }
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false
+  }
 }
