--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,14 @@ logging.level.org.springframework.web=DEBUG
 # ------------------------------
 
 spring.devtools.remote.secret=mysecret
+
+
+
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/bo
+spring.datasource.username=postgres
+spring.datasource.password=7467
